# scrkey.rs

./: Cargo.toml
src/: main.rs
src/libs/: config.rs  get_input.rs  gui.rs  input.rs  mod.rs
src/libs/gui/: window.rs
