[package]
name = "scrkey"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
gdk = "0.18.0"
gio = "0.18.2"
gtk = "0.18"
input = "0.8.3"
libc = "0.2.148"
serde = "1.0.188"
serde_derive = "1.0.188"
smart-default = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
winit = "0.28.7"
xdg = "2.5.2"
